--- a/main.html
+++ b/main.html
@@ -180,7 +180,7 @@
     <div class="container">
         <div class="header">
             <h1>🚀 Mini Projelerim</h1>
-            <p>GitHub repository'mde geliştirdiğim HTML projeleri</p>
+            <p>2025 Yılında geliştirdiğim mini projeler</p>
         </div>
         
         <div id="loading" class="loading">
@@ -192,8 +192,8 @@
 
     <script>
         // Repository bilgileri - Buraya kendi repo linkinizi yazın
-        const GITHUB_REPO_URL = 'https://api.github.com/repos/KULLANICI_ADI/REPO_ADI/contents';
-        const GITHUB_PAGES_BASE = 'https://KULLANICI_ADI.github.io/REPO_ADI/';
+        const GITHUB_REPO_URL = 'https://github.com/developerfield/code25s/contents';
+        const GITHUB_PAGES_BASE = 'https://github.com/developerfield/code25s';
         
         // Dosya filtreleme ayarları
         const EXCLUDED_FILES = ['index.html', 'README.md', '.gitignore', 'base.json'];
