--- a/main.html
+++ b/main.html
@@ -179,8 +179,8 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>🚀 Mini Projelerim</h1>
-            <p>2025 Yılında geliştirdiğim mini projeler</p>
+            <h1>🚀  Mini Projeler</h1>
+            <p>2025 Yılında geliştirdiğim mini projelerim</p>
         </div>
         
         <div id="loading" class="loading">
@@ -192,7 +192,7 @@
 
     <script>
         // Repository bilgileri - Buraya kendi repo linkinizi yazın
-        const GITHUB_REPO_URL = 'https://github.com/developerfield/code25s/contents';
+        const GITHUB_REPO_URL = 'https://api.github.com/repos/developerfield/codecore/contents';
         const GITHUB_PAGES_BASE = 'https://github.com/developerfield/code25s';
         
         // Dosya filtreleme ayarları
