--- a/main.html
+++ b/main.html
@@ -193,7 +193,7 @@
     <script>
         // Repository bilgileri - Buraya kendi repo linkinizi yazın
         const GITHUB_REPO_URL = 'https://api.github.com/repos/developerfield/codecore/contents';
-        const GITHUB_PAGES_BASE = 'https://github.com/developerfield/code25s/';
+        const GITHUB_PAGES_BASE = 'https://developerfield.github.io/code25s/';
         
         // Dosya filtreleme ayarları
         const EXCLUDED_FILES = ['index.html', 'README.md', '.gitignore', 'base.json'];
