--- a/main0.1.html
+++ b/main0.1.html
@@ -35,7 +35,7 @@
         }
 
         .header h1 {
-            color: #333;
+            color: #d10000;
             font-size: 2.5em;
             margin-bottom: 10px;
             background: linear-gradient(135deg, #667eea, #764ba2);
