--- a/anlz5.html
+++ b/anlz5.html
@@ -185,7 +185,7 @@ textarea:focus{border-color:var(--ink);}
   <div class="ctrl">
     <label>Tahmin Adımı</label>
     <span class="v" id="vN">8</span>
-    <input type="range" id="rN" min="1" max="31" value="8"
+    <input type="range" id="rN" min="1" max="30" value="4"
       oninput="document.getElementById('vN').textContent=this.value">
   </div>
   <div class="ctrl">
@@ -201,7 +201,7 @@ textarea:focus{border-color:var(--ink);}
   <div class="ctrl">
     <label>Simülasyon</label>
     <span class="v" id="vMC">2000</span>
-    <input type="range" id="rMC" min="500" max="1000000" step="1000" value="2000"
+    <input type="range" id="rMC" min="1" max="150000" step="500" value="2000"
       oninput="document.getElementById('vMC').textContent=this.value">
   </div>
   <div class="ctrl">
