--- a/anlz5.html
+++ b/anlz5.html
@@ -207,9 +207,16 @@ textarea:focus{border-color:var(--ink);}
   <div class="ctrl">
     <label>Güven Bandı</label>
     <select id="bandConf">
+      <option value="0.5">%50</option>
+      <option value="0.6">%60</option>
+      <option value="0.7">%70</option>
       <option value="0.8">%80</option>
       <option value="0.9" selected>%90</option>
       <option value="0.95">%95</option>
+      <option value="0.97">%97</option>
+      <option value="0.99">%99</option>
+      <option value="1">%100</option>
+      <option value="1.2">%120</option>
     </select>
   </div>
   <div style="flex:1"></div>
