--- a/anlz10.2.html
+++ b/anlz10.2.html
@@ -5,8 +5,8 @@
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 <title>Veri Analizi</title>
 <link href="https://fonts.googleapis.com/css2?family=DM+Mono:ital,wght@0,300;0,400;0,500;1,300&family=Syne:wght@700;800&display=swap" rel="stylesheet">
-<script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-firestore.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore-compat.js"></script>
 <style>
 *{margin:0;padding:0;box-sizing:border-box;}
 :root{
@@ -309,17 +309,31 @@ footer{padding:14px 28px;border-top:1px solid var(--border);font-size:10px;color
 
 <script>
 // ════════════════════════════════════════════════════════
-// FIREBASE
-// ════════════════════════════════════════════════════════
-const firebaseConfig={apiKey:"AIzaSyAIGzwmEB9F7K7KQzsEU5etVWejZ3oSluc",authDomain:"paralayici.firebaseapp.com",projectId:"paralayici",storageBucket:"paralayici.firebasestorage.app",messagingSenderId:"980843550614",appId:"1:980843550614:web:93dd5bda4ddc377b20efb7"};
-firebase.initializeApp(firebaseConfig);
-const db=firebase.firestore();
-
-// ════════════════════════════════════════════════════════
 // GLOBALS
 // ════════════════════════════════════════════════════════
 let RAW_DATA=[];
 let DOMAIN=[];
+let db=null;
+
+// ════════════════════════════════════════════════════════
+// FIREBASE — güvenli init (script yüklenmesini bekle)
+// ════════════════════════════════════════════════════════
+function initFirebase(){
+  return new Promise((resolve,reject)=>{
+    const tryInit=()=>{
+      try{
+        if(typeof firebase==='undefined'){setTimeout(tryInit,80);return;}
+        const firebaseConfig={apiKey:"AIzaSyAIGzwmEB9F7K7KQzsEU5etVWejZ3oSluc",authDomain:"paralayici.firebaseapp.com",projectId:"paralayici",storageBucket:"paralayici.firebasestorage.app",messagingSenderId:"980843550614",appId:"1:980843550614:web:93dd5bda4ddc377b20efb7"};
+        if(!firebase.apps.length)firebase.initializeApp(firebaseConfig);
+        db=firebase.firestore();
+        resolve();
+      }catch(e){reject(e);}
+    };
+    tryInit();
+    // 10 saniye timeout
+    setTimeout(()=>reject(new Error('Firebase 10 saniyede yüklenemedi. İnternet bağlantısını kontrol et.')),10000);
+  });
+}
 
 // ════════════════════════════════════════════════════════
 // LOADING
@@ -339,13 +353,18 @@ function hideLoad(){
 // ════════════════════════════════════════════════════════
 async function fetchData(){
   setLoad(20,'Firestore sorgusu gönderiliyor...');
-  const snap=await db.collection('cumulative_daily_data').orderBy('date','asc').get();
+  if(!db)throw new Error('Firestore bağlantısı kurulamadı.');
+  let snap;
+  try{
+    snap=await db.collection('cumulative_daily_data').orderBy('date','asc').get();
+  }catch(e){
+    throw new Error('Firestore sorgu hatası: '+e.message);
+  }
   setLoad(60,'Veriler işleniyor...');
-  if(snap.empty)throw new Error('Koleksiyonda veri yok.');
+  if(snap.empty)throw new Error('Koleksiyonda hiç veri yok.');
   RAW_DATA=[];
   snap.forEach(doc=>{const v=doc.data().value;if(typeof v==='number')RAW_DATA.push(v);});
-  if(RAW_DATA.length<5)throw new Error('Yeterli veri yok (min 5).');
-  // Domain: veriden benzersiz değerleri bul, sırala
+  if(RAW_DATA.length<5)throw new Error('Yeterli veri yok (min 5 kayıt).');
   DOMAIN=[...new Set(RAW_DATA.map(v=>Math.round(v)))].sort((a,b)=>a-b);
   setLoad(80,'Grafikler hazırlanıyor...');
 }
@@ -980,6 +999,9 @@ async function runAnalysis(){
 // ════════════════════════════════════════════════════════
 async function init(){
   try{
+    setLoad(5,'Firebase SDK bekleniyor...');
+    await initFirebase();
+    setLoad(12,'Bağlantı kuruldu, veri çekiliyor...');
     await fetchData();
     setLoad(92,'Arayüz hazırlanıyor...');
     await sleep(80);
@@ -1001,7 +1023,13 @@ async function init(){
       }
     });
   }catch(e){
-    document.getElementById('loadMsg').textContent='Hata: '+e.message;
+    document.getElementById('loadMsg').textContent='❌ '+e.message;
+    document.getElementById('loadMsg').style.color='#ff4757';
+    // Retry butonu ekle
+    const btn=document.createElement('button');
+    btn.textContent='Tekrar Dene';btn.style.cssText='margin-top:20px;background:#4f8eff;color:#fff;border:none;padding:8px 20px;font-family:DM Mono,monospace;font-size:12px;letter-spacing:1px;cursor:pointer;border-radius:3px;';
+    btn.onclick=()=>{btn.remove();document.getElementById('loadMsg').style.color='';init();};
+    document.getElementById('loadScreen').appendChild(btn);
     console.error(e);
   }
 }
