--- a/pl4.html
+++ b/pl4.html
@@ -33,7 +33,7 @@
 <button class="action-btn blue" onclick="openChartsModal()">📊 Tüm Grafikleri Göster</button>
 <button class="action-btn red" onclick="openSpecialCalculation()">🔬 Özel Hesaplama Grafiği</button>
 <button class="action-btn orange" onclick="toggleTrendVisibility()"><span id="trend-text">👁️ Trend Analizini Göster</span></button>
-<button class="action-btn purple" onclick="window.open('https://www.google.com','_blank')">🌐 Harici Siteye Git</button>
+<button class="action-btn purple" onclick="window.open('https://developerfield.github.io/code25s/anlz9.2.4.2.html','_blank')">🌐 Harici Siteye Git</button>
 <button class="action-btn green" onclick="openPredictionModal()">🔮 Gelecek Verileri Tahmin Et</button>
 <div id="current-cumulative-value"></div>
 <div class="bonus-control">
